  Remove RCLocalizationHelper plugin (#2029457)
  Clarify Supercopier caused hang in release notes (#2030040)
  Confirmation dialog for move operations (#2026508)
  Unlimited undo (#2033754)
  Add wait cursor for undo and redo (#2039228)
  Rename color scheme menu item "None" and add separator (#2027300)
  Add icon for "Open Conflict File" menu item (#2047054)
  BugFix: Use system codepage for paths (#1979429, #2008581)
  BugFix: ANSI build crash in folder compare (#2010053)
  BugFix: Add insert/overtype mode indicator to statusbar (#2015174)
  BugFix: Detected UTF-8 encoding shown as 65001 (#2012377)
  Bugfix: Don't warn about closing multiple windows when only one
   window is open (#2010463)
  BugFix: Moving was allowed for protected items (#2023734)
  BugFix: Could change EOL style for protected file (#2025781)
  BugFix: Shift+Backspace didn't work in editor (#1153696)
  BugFix: Deleting/Moving file crashed WinMerge in debugger (#2025833)
  BugFix: External editor command line switches did not work (#2037862)
  BugFix: Editing line filters updated wrong filter (#2025130)
  BugFix: Could change syntax highlight mode when highlighting was
    disabled from options (#2027325)
  BugFix: Boldfacing did work only for Courier font (#2000996)
  Bugfix: Lost focus after folder compare operations (#2046002)
  Translation updates:
  - Chinese Traditional (#2039929)

WinMerge 2.10.x (R2_10) branch created (r5561)

WinMerge 2.9.1.5 - 2008-07-04 (r5560)
  Manual: Copy editing (#2000322, #2005418)
  Manual: Clarify 64-bit support (#2002431)
  Reduce executable sizes (#2003203)
  Release Notes update (#2007673, r5557)
  BugFix: Possible crash when enabling line filter (#2004160)
  BugFix: Location Pane flickers when scrolling (#1938177, #2005031)
  BugFix: Use system codepage for paths (#1979429, #2008581)
  BugFix: Random crashes in folder compare (#2005308)
  Translation updates:
  - Chinese Traditional (#2007426)

WinMerge 2.9.1.4 - 2008-06-24 (r5518)